--- a/style.css
+++ b/style.css
@@ -11,12 +11,14 @@
     color: rgb(75, 102, 0);
     font-size: 22px;
     font-weight: bolder;
+    text-align: center;
 }
 #links{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(75, 102, 0);
     font-weight: bold;
-    font-size: 18px;    
+    font-size: 18px;  
+    text-align: center;  
 }
 *{
     background-color:rgb(250, 239, 192);
@@ -47,4 +49,34 @@
 }
 .read{
     text-align: center;
+}
+
+/* pollo */
+
+#polloheader{ 
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(75, 102, 0);
+    font-size:  65px;
+
+}
+#polloimg{
+    text-align:center;
+}
+#pollo{
+    text-align: center;
+    text-decoration-line: underline;
+    color: rgb(75, 102, 0);
+}
+.p{
+   text-align: center; 
+   color: rgb(40, 54, 1);
+}
+.h{
+    text-align: center;
+    text-decoration-line: underline;
+    color: rgb(75, 102, 0);
+}
+.list{
+    color: rgb(40, 54, 1);  
 }
