--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@
     display:flexbox;
     padding: 10px 20px;
     margin-bottom: 8px;
-    margin-left: 150px; 
+    margin-left:auto;
+    margin-top: auto;
     border-radius: 4px; 
     border: none;
 }
@@ -32,10 +33,10 @@
 
 }
 #a{
-    margin-left:250px;
+    margin-left:auto;
 }
 #b{
-    margin-left:230px;
+    margin-left:auto;
 }
 *{
     background-color:rgb(250, 239, 192);
