--- a/style.css
+++ b/style.css
@@ -20,13 +20,15 @@
     font-weight: bold;
     font-size: 18px;  
     text-align: center;
-    display:flexbox;
     padding: 10px 20px;
     margin-bottom: 8px;
     margin-left:auto;
     margin-top: auto;
     border-radius: 4px; 
     border: none;
+    display:inline; 
+    cursor:pointer;
+
 }
 .button:hover{
     background-color:rgb(188, 212, 122)
