--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 /*Index StyleSheet*/
 
 #header{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin:auto;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(75, 102, 0);
@@ -26,7 +31,6 @@
     margin-top: auto;
     border-radius: 4px; 
     border: none;
-    display:inline; 
     cursor:pointer;
 
 }
@@ -43,7 +47,14 @@
 *{
     background-color:rgb(250, 239, 192);
 }
+#buttons{
+    display:flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    flex-wrap:wrap-reverse;
 
+}
 /* Aloo Posto StyleSheet*/
 
 #body{
