--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
 
 .header{
     display: flex;
-    flex-direction: row;
+    flex-direction:column;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
