--- a/style.css
+++ b/style.css
@@ -2,15 +2,26 @@
 
 #header{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(75, 102, 0);
     font-size:  75px;
+    text-shadow: 
+    -1px -1px 0 darkgreen,  
+    1px -1px 0 darkgreen,
+    -1px 1px 0 darkgreen,
+    1px 1px 0 darkgreen;
+-webkit-text-stroke: 0.5px black;
 }
 #intro{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(75, 102, 0);
+    color:rgb(250, 239, 192);
     font-size: 22px;
     font-weight: bolder;
     text-align: center;
+    text-shadow: 
+        -1px -1px 0 darkgreen,  
+        1px -1px 0 darkgreen,
+        -1px 1px 0 darkgreen,
+        1px 1px 0 darkgreen;
+    -webkit-text-stroke: 0.5px black;
 }
 .button{
     background-color: rgb(75, 102, 0);
@@ -34,8 +45,19 @@
 *{
     background-color:rgb(250, 239, 192);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(75, 102, 0);
+    color:rgb(250, 239, 192);
     font-weight: bold;
+    background-image: url('./images/cook.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    text-shadow: 
+    -1px -1px 0 darkgreen,  
+    1px -1px 0 darkgreen,
+    -1px 1px 0 darkgreen,
+    1px 1px 0 darkgreen;
+-webkit-text-stroke: 0.5px darkgreen;
 }
 
 .header{
@@ -69,7 +91,7 @@
 #header{
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(75, 102, 0);
+    color:rgb(250, 239, 192);
     font-size:  65px;
 }
 .image{
@@ -95,9 +117,15 @@
 }
 
 #back{
-    text-decoration: none;
-    font-style: italic;
-    font-weight: bolder;
+   width: 50px;
+   height: 50px;
+   background-image: url('./images/home.PNG');
+   background-size: contain;
+   background-repeat: no-repeat;
+   background-position: center;
+   border: none;
+   cursor: pointer;
+
 }
 #back:hover{
     color: rgba(0, 0, 0, 0.384);
