--- a/style.css
+++ b/style.css
@@ -141,19 +141,13 @@
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(75, 102, 0);
+    font-weight: bold;
 }
 #top{
     font-weight: bold;
     font-size: 65px;
 }
-#Home{
-    text-decoration: none;
-    font-style: italic;
-    font-weight: bolder;
-}
-#Home:hover{
-    color: rgba(0, 0, 0, 0.384);
-}
+
 #Father{
     display:flex;
     flex-direction: row;
@@ -162,7 +156,12 @@
     align-items: center;
 }
 .start{
-    text-decoration:underline;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+    color:rgba(59, 81, 0, 0.951);
+    font-weight: bold;
 }
 /* Chicken Nuggets */
 
