made the dino nugget background beige

--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 .text{
     color: rgb(58, 78, 2);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: beige;
 }
 
 #DINO{
